Fix bugs for styles

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <p>
             Strategy is not something you can retrospectively apply in order to make irrelevant ideas seem coherent strategists start out with a clear approach to ensure our creative proposal will match your business needs. 
           </p>
-          <a href="#">LEARN MORE</a>
+          <a href="#" class="button">LEARN MORE</a>
         </article>
       </div>
     </div>
@@ -116,7 +116,7 @@
           <p>
             Filema Rodion proposes individual, airtight packages that keep the product's characteristics unchanged for treats for the marriage, baptism and every social event.
           </p>
-          <a href="#">LEARN MORE</a>
+          <a href="#" class="button">LEARN MORE</a>
         </article>
         <figure>
           <img src="image/productImage02.png" alt="Product image">
