Fix bugs for styles and index

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               <article>
                 <h2>End of Thino</h2>
                 <span>
-                  When the switch is on, it cuts off the data transmission<br>between the charging device and the source
+                  When the switch is on, it cuts off the data transmission between the charging device and the source
                 </span>
               </article>
             </div>
@@ -153,7 +153,7 @@
               <article>
                 <h2>Het Boerenveensche</h2>
                 <span>
-                  Thino has a physical switch that activates<br>its turbo-charging feature
+                  Thino has a physical switch that activates its turbo-charging feature
                 </span>
               </article>
             </div>
@@ -183,7 +183,7 @@
               <article>
                 <h2>Harmony / Poliform</h2>
                 <span>
-                  This chair joins chaos and order in a symbiotic<br>relationship, full of expression and rhythm
+                  This chair joins chaos and order in a symbiotic relationship, full of expression and rhythm
                 </span>
               </article>
             </div>
@@ -198,7 +198,7 @@
               <article>
                 <h2>Rowenta Studiodry</h2>
                 <span>
-                  Rowenta Studiodry 2nd Generation<br>in 2012
+                  Rowenta Studiodry 2nd Generation in 2012
                 </span>
               </article>
             </div>
@@ -213,7 +213,7 @@
               <article>
                 <h2>Fritsch Durisotti</h2>
                 <span>
-                  Spline Spline is a new way of producing wicker<br>furniture that dramatically 
+                  Spline Spline is a new way of producing wicker furniture that dramatically 
                 </span>
               </article>
             </div>
@@ -237,21 +237,21 @@
               <img src="image/agilityImage.png" alt="Agility">
               <h2>Agility</h2>
               <p>
-                We believe in a seamless client partnership that<br>connects us into a single unified team. We're not only<br>agile in code but in discovery, and design.
+                We believe in a seamless client partnership that connects us into a single unified team. We're not only agile in code but in discovery, and design.
               </p>
             </li>
             <li>
               <img src="image/teamImage.png" alt="Team">
               <h2>Team</h2>
               <p>
-                Our dedicated team model ensures that every project<br>receives the meticulous attention and resource it<br>deserves from our Strategists, Designers, Producers,<br>Engineers, & Filmmakers.
+                Our dedicated team model ensures that every project receives the meticulous attention and resource it deserves from our Strategists, Designers, Producers, Engineers, & Filmmakers.
               </p>
             </li>
             <li>
               <img src="image/collaborationImage.png" alt="Collaboration">
               <h2>Collaboration</h2>
               <p>
-                Nothing we do is in isolation. Our process is<br>extremely collaborative, leveraging our clients<br>unique perspectives to activate our own expertise.
+                Nothing we do is in isolation. Our process is extremely collaborative, leveraging our clients unique perspectives to activate our own expertise.
               </p>
             </li>
           </ul>
@@ -264,7 +264,7 @@
         </div>
         <div class="contact">
           <span>
-            If you'd like to get in touch,<br> you can send ud an email directly at<br>
+            If you'd like to get in touch, you can send ud an email directly at<br>
             <a href="mailto:hello@10x.com" class="email">hello@10x.com</a>
           </span>
         </div>
